build/collector/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: houyi-collector
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 14580
        name: grpc-traces
        protocol: GRPC
      hosts:
        - "*"
    - port:
        number: 22650
        name: grpc-gossip
        protocol: GRPC
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: houyi-collector
spec:
  hosts:
    - "*"
  gateways:
    - houyi-collector
  tcp:
    - name: "traces"
      match:
        - port: 14580
      route:
        - destination:
            host: collector
            port:
              number: 14580
            subset: v1
    - name: "gossip"
      match:
        - port: 22650
      route:
        - destination:
            host: collector
            port:
              number: 22650
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: collector
spec:
  host: collector
  subsets:
    - name: v1
      labels:
        version: v1
---
